Fix fonts, realign format

--- a/index.css
+++ b/index.css
@@ -14,14 +14,14 @@
 
 @font-face {
   font-family: 'ptsans';
-  src: url(fonts\PTSans-Regular.ttf);
+  src: url(fonts/PTSans-Regular.ttf);
   font-style: normal;
   font-weight: 100;
 }
 
 @font-face {
   font-family: 'var';
-  src: url(fonts\VarelaRound-Regular.ttf);
+  src: url(fonts/VarelaRound-Regular.ttf);
   font-style: normal;
   font-weight: 100;
 }
@@ -42,6 +42,7 @@
     padding: 0px;
     height: 50px;
     z-index: 10;
+    font-family: var;
 }
 
 .sticky-helper {
@@ -57,10 +58,10 @@
     font-size: 30px;
     text-align: left;
     margin-left: 20px;
-    margin-top: 000px;
     position: sticky;
     top: 0;
     margin-left: 20px;
+    font-family: var;
 }
 
 .greeting {
@@ -111,13 +112,12 @@
 .project1 {
     height: 80vh;
     padding-top: 40px;
-    background-color: #A4f561;
+    background-color: #ffffff;
 }
 
 .project2 {
     height: 80vh;
     padding-top: 40px;
-    background-color: #E83A62;
 }
 
 .image-container {
@@ -133,7 +133,7 @@
     height: 80vh;
     width: 40vw;
     margin-left: 10vw;
-    font-family: ptsans;
+    font-family: var;
 }
 
 .title {
@@ -150,7 +150,7 @@
     height: auto;
     margin-left: 10vw;
     padding-top: 60px;
-    top: -700px;
+    top: -780px;
 }
 
 .p2-text-box {
